# structured-response

./: LICENSE  README.md  pyproject.toml  setup.py
structured_response/: __init__.py  response.py
