[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structured_response"
version = "0.1.2"
description = "A simple package to generate structured HTTP responses with trace ID."
authors = [{ name = "Rohaan Nadeem", email = "rohaan@rohaannadeem.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask>=3.0.0,<4.0"
]

[project.urls]
homepage = "https://github.com/rohaan2614/structured-response"
repository = "https://github.com/rohaan2614/structured-response.git"
documentation = "https://github.com/rohaan2614/structured-response/wiki"